--- a/LaserRadar/HeadControl/app/src/main/res/layout/battery_rightbar.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/layout/battery_rightbar.xml
@@ -28,6 +28,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_Battery_Level1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,6 +39,7 @@
                 android:textSize="27px" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_Battery_runTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
