--- a/LaserRadar/HeadControl/app/src/main/res/layout/battery_rightbar.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/layout/battery_rightbar.xml
@@ -8,14 +8,16 @@
         android:id="@+id/ll_right_bar1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
         <ImageView
             android:id="@+id/imgViewBtnRight"
-            android:layout_width="53dp"
-            android:layout_height="49dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/ll_right_bar"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="27dp"
             android:background="@mipmap/you_yc"
             />
 
