update for socket

--- a/LaserRadar/HeadControl/app/src/main/res/layout/fragment_clean.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/layout/fragment_clean.xml
@@ -57,6 +57,7 @@
                             >
 
                             <ImageView
+                                android:id="@+id/img_clean_level_change"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:src="@mipmap/youshui"
