--- a/LaserRadar/HeadControl/app/src/main/res/drawable/animationface.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/drawable/animationface.xml
@@ -8,11 +8,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false"
     >
-    <item android:drawable="@mipmap/face1" android:duration="150"></item>
-    <item android:drawable="@mipmap/face2" android:duration="150"></item>
-    <item android:drawable="@mipmap/face3" android:duration="150"></item>
-    <item android:drawable="@mipmap/face2" android:duration="150"></item>
-    <item android:drawable="@mipmap/face1" android:duration="5000"></item>
+    <item android:drawable="@mipmap/faces1" android:duration="90"></item>
+    <item android:drawable="@mipmap/faces2" android:duration="90"></item>
+    <item android:drawable="@mipmap/faces3" android:duration="90"></item>
+    <item android:drawable="@mipmap/faces4" android:duration="90"></item>
+    <item android:drawable="@mipmap/faces5" android:duration="3000"></item>
     <!--<item android:drawable="@mipmap/face4" android:duration="300"></item>-->
     <!--<item android:drawable="@mipmap/face5" android:duration="300"></item>-->
     <!--<item android:drawable="@mipmap/face6" android:duration="300"></item>-->
