--- a/Dudu/app/src/main/res/layout/activity_main.xml
+++ b/Dudu/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
+    <Button
+        android:id="@+id/play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="播放"
+        />
 </RelativeLayout>
