--- a/LaserRadar/HeadControl/app/src/main/res/drawable/smile.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/drawable/smile.xml
@@ -8,7 +8,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false"
     >
-    <item android:drawable="@mipmap/facese1" android:duration="2000"></item>
-    <item android:drawable="@mipmap/facese2" android:duration="200"></item>
-    <item android:drawable="@mipmap/facese3" android:duration="2000"></item>
+    <item android:drawable="@mipmap/facese1" android:duration="2000"/>
+    <item android:drawable="@mipmap/facese2" android:duration="200"/>
+    <item android:drawable="@mipmap/facese3" android:duration="2000"/>
 </animation-list>
