--- a/LaserRadar/HeadControl/app/src/main/res/drawable/animationnod.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/drawable/animationnod.xml
@@ -8,11 +8,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false"
     >
-    <item android:drawable="@mipmap/nod1" android:duration="200"></item>
-    <item android:drawable="@mipmap/nod2" android:duration="200"></item>
-    <item android:drawable="@mipmap/nod3" android:duration="200"></item>
-    <item android:drawable="@mipmap/nod4" android:duration="200"></item>
-    <item android:drawable="@mipmap/nod5" android:duration="200"></item>
-    <item android:drawable="@mipmap/nod6" android:duration="200"></item>
-    <item android:drawable="@mipmap/nod7" android:duration="200"></item>
+    <item android:drawable="@mipmap/nod1" android:duration="200"/>
+    <item android:drawable="@mipmap/nod2" android:duration="200"/>
+    <item android:drawable="@mipmap/nod3" android:duration="200"/>
+    <item android:drawable="@mipmap/nod4" android:duration="200"/>
+    <item android:drawable="@mipmap/nod5" android:duration="200"/>
+    <item android:drawable="@mipmap/nod6" android:duration="200"/>
+    <item android:drawable="@mipmap/nod7" android:duration="200"/>
 </animation-list>
