--- a/LaserRadar/HeadControl/app/src/main/res/drawable/electric.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/drawable/electric.xml
@@ -8,20 +8,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false"
     >
-    <item android:drawable="@mipmap/electric1" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric2" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric3" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric4" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric5" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric6" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric7" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric8" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric9" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric10" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric11" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric12" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric13" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric14" android:duration="200"></item>
-    <item android:drawable="@mipmap/electric15" android:duration="200"></item>
+    <item android:drawable="@mipmap/electric1" android:duration="200"/>
+    <item android:drawable="@mipmap/electric2" android:duration="200"/>
+    <item android:drawable="@mipmap/electric3" android:duration="200"/>
+    <item android:drawable="@mipmap/electric4" android:duration="200"/>
+    <item android:drawable="@mipmap/electric5" android:duration="200"/>
+    <item android:drawable="@mipmap/electric6" android:duration="200"/>
+    <item android:drawable="@mipmap/electric7" android:duration="200"/>
+    <item android:drawable="@mipmap/electric8" android:duration="200"/>
+    <item android:drawable="@mipmap/electric9" android:duration="200"/>
+    <item android:drawable="@mipmap/electric10" android:duration="200"/>
+    <item android:drawable="@mipmap/electric11" android:duration="200"/>
+    <item android:drawable="@mipmap/electric12" android:duration="200"/>
+    <item android:drawable="@mipmap/electric13" android:duration="200"/>
+    <item android:drawable="@mipmap/electric14" android:duration="200"/>
+    <item android:drawable="@mipmap/electric15" android:duration="200"/>
 
 </animation-list>
