--- a/LaserRadar/HeadControl/app/src/main/res/drawable/speak.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/drawable/speak.xml
@@ -8,13 +8,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false"
     >
-    <item android:drawable="@mipmap/speak1" android:duration="300"></item>
-    <item android:drawable="@mipmap/speak2" android:duration="300"></item>
-    <item android:drawable="@mipmap/speak3" android:duration="200"></item>
-    <item android:drawable="@mipmap/speak4" android:duration="300"></item>
-    <item android:drawable="@mipmap/speak5" android:duration="300"></item>
-    <item android:drawable="@mipmap/speak6" android:duration="300"></item>
-    <item android:drawable="@mipmap/speak7" android:duration="300"></item>
-    <item android:drawable="@mipmap/speak8" android:duration="300"></item>
+    <item android:drawable="@mipmap/speak1" android:duration="300"/>
+    <item android:drawable="@mipmap/speak2" android:duration="300"/>
+    <item android:drawable="@mipmap/speak3" android:duration="200"/>
+    <item android:drawable="@mipmap/speak4" android:duration="300"/>
+    <item android:drawable="@mipmap/speak5" android:duration="300"/>
+    <item android:drawable="@mipmap/speak6" android:duration="300"/>
+    <item android:drawable="@mipmap/speak7" android:duration="300"/>
+    <item android:drawable="@mipmap/speak8" android:duration="300"/>
 
 </animation-list>
