--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.android.jdrd.robot.activity.MainActivity">
-
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
     <GridView
         android:id="@+id/gview"
         android:layout_width="match_parent"
@@ -30,7 +32,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="insert"
-        android:visibility="gone"
         />
     <Button
         android:id="@+id/update_btn"
@@ -44,7 +45,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="delete"
-        android:visibility="gone"
         />
     <Button
         android:id="@+id/select_table_btn"
@@ -64,4 +64,29 @@
         android:id="@+id/content_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-</LinearLayout>
+    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/map_right_Ralative"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:layout_alignParentLeft="true">
+        <ImageView
+            android:id="@+id/imgViewmapnRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/linearlayout_all"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="27dp"
+            android:background="@mipmap/zuo_yc"
+            />
+        <LinearLayout
+            android:id="@+id/linearlayout_all"
+            android:layout_width="50dp"
+            android:layout_alignParentLeft="true"
+            android:orientation="horizontal"
+            android:background="@mipmap/bg"
+            android:layout_height="wrap_content">
+        </LinearLayout>
+    </RelativeLayout>
+</RelativeLayout>
